Off-center banner fix

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -132,7 +132,6 @@ div[ng-view]{
     height: 200px;
     background-size: cover;
     background-position: center;
-    background-attachment: fixed;
     background-color: $bluegreen1;
     h1 {
       position: absolute;
